# RustedBeats

./: .gitignore  Cargo.toml  shell.nix
.direnv/: nix-profile-.3389.9cac4585028  nix-profile-.3389.9cac4585028.rc
src/: db_operations.rs  file_operations.rs  main.rs  message_types.rs  music_player.rs  server_handling.rs
