[package]
name = "sousa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
confy = "0.5.1"
dirs-next = "2.0.0"
regex = "1.6.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
rusqlite = {version="0.28.0", features=["bundled"]}
scan_dir = "0.3.3"
derive_more = "0.99.17"
id3 = "1.5.1"
rodio = "0.16.0"
tungstenite = "0.18.0"
